# FactoryMind-Multimodal-Industrial-Intelligence-Platform

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yaml
.github/: CODEOWNERS  (+1 more)
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/src/: __init__.py  main.py
apps/api/src/agents/: __init__.py  alert_agent.py  audio_analysis.py  critic_agent.py  feedback_agent.py  graph.py  human_approval.py  knowledge_retrieval.py  llm.py  maintenance_planning.py  rca_agent.py  report_generation.py  sensor_analysis.py  state.py  supervisor.py  visual_inspection.py
apps/api/src/core/: __init__.py  config.py  exceptions.py  observability.py  security.py
apps/api/src/db/: __init__.py  models.py  session.py
apps/api/src/db/migrations/: env.py
apps/api/src/hf_tasks/: __init__.py  _client.py  asr.py  audio_classification.py  document_qa.py  image_classification.py  image_feature_extraction.py  image_segmentation.py  ner.py  object_detection.py  sentence_similarity.py  summarization.py  text_ranking.py  time_series_forecast.py  visual_qa.py  zero_shot_classification.py  zero_shot_image_cls.py
apps/api/src/models/: __init__.py  schemas.py
apps/api/src/rag/: __init__.py  _corpus.py  cache.py  compression.py  pipeline.py  self_rag.py
apps/api/src/rag/ingestion/: __init__.py  chunkers.py  embedders.py  loaders.py
apps/api/src/routers/: __init__.py  alerts.py  dashboard.py  inspections.py  knowledge.py  maintenance.py  models.py  rca.py  webhooks.py  ws.py
apps/api/src/tools/: __init__.py  _base.py  grafana_tool.py  jira_tool.py  pagerduty_tool.py  s3_tool.py  sap_tool.py  slack_tool.py
apps/api/src/workers/: __init__.py  celery_app.py  evaluation.py  rag_refresh.py  shift_report.py
apps/api/tests/eval/: test_eval_gates.py
apps/api/tests/integration/: test_api.py
apps/api/tests/unit/: test_hf_tasks.py  test_rag.py  test_smoke.py
(+51 files in other folders)
