[project]
name = "factorymind-api"
version = "1.0.0"
description = "FactoryMind — Multimodal Industrial Intelligence Platform (API service)"
requires-python = ">=3.12"
readme = "../../README.md"
dependencies = [
    # ── Web / async ──
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "websockets>=13.0",
    # ── Agents / LLM / RAG ──
    "langgraph>=0.2.45",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.2",
    "langchain-openai>=0.2",
    "llama-index>=0.11",
    "anthropic>=0.39",
    # ── Data stores ──
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "redis>=5.1",
    "qdrant-client>=1.12",
    "neo4j>=5.25",
    "elasticsearch>=8.15",
    # ── Streaming / tasks ──
    "aiokafka>=0.11",
    "celery>=5.4",
    # ── ML / numeric ──
    "numpy>=1.26",
    "scikit-learn>=1.5",
    # ── Observability ──
    "prometheus-client>=0.21",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "langfuse>=2.53",
    # ── Integrations ──
    "slack-sdk>=3.33",
    "asyncua>=1.1",
    "boto3>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "testcontainers>=4.8",
    "ragas>=0.2",
    "deepeval>=1.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
